Add login page and basic logic for login

--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -17,7 +17,7 @@
         <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
       </form>
-      <button class="ml-3 btn btn-secondary">Login</button>
+      <button class="ml-3 btn btn-secondary" routerLink="login">Login</button>
       <button class="ml-3 btn btn-secondary" >Logout</button>
     </div>
   </nav>
