Add Login service

--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -7,18 +7,18 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/" *ngIf="elementIs">Home<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" routerLink="registrationForm">Registration <span class="sr-only">(current)</span></a>
+          <a class="nav-link" routerLink="registrationForm" *ngIf="!elementIs">Registration <span class="sr-only">(current)</span></a>
         </li>
       </ul>
       <form class="form-inline mt-2 mt-md-0">
-        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search" *ngIf="elementIs ">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit" *ngIf="elementIs ">Search</button>
       </form>
-      <button class="ml-3 btn btn-secondary" routerLink="login">Login</button>
-      <button class="ml-3 btn btn-secondary" >Logout</button>
+      <button class="ml-3 btn btn-secondary" routerLink="login" *ngIf="!elementIs ">Login</button>
+      <button class="ml-3 btn btn-secondary" (click)="logout()" *ngIf="elementIs ">Logout</button>
     </div>
   </nav>
 </header>
