--- a/frontend/src/app/components/welcome/welcome.component.css
+++ b/frontend/src/app/components/welcome/welcome.component.css
@@ -1,3 +1,12 @@
+.bg{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    overflow: auto;
+    background-color: wheat;
+}
 .wrapper{
     margin-top: 4rem;
     margin-left: 1rem;
