Add order service

--- a/frontend/src/app/components/welcome/welcome.component.css
+++ b/frontend/src/app/components/welcome/welcome.component.css
@@ -5,7 +5,7 @@
     right: 0;
     bottom: 0;
     overflow: auto;
-    background-color: wheat;
+    background-color: powderblue;
 }
 .wrapper{
     margin-top: 4rem;
