--- a/frontend/src/app/components/welcome/welcome.component.html
+++ b/frontend/src/app/components/welcome/welcome.component.html
@@ -10,7 +10,7 @@
             <li class="list-group-item">Available:{{book.quantity}}</li>
         </ul>
         <div class="card-body text-center">
-            <button class="btn btn btn-info">Order it</button>
+            <button class="btn btn btn-info" (click)="orderTheBook(book)">Order it</button>
         </div>
     </div>
 </div>
