--- a/frontend/src/app/components/header/header.component.css
+++ b/frontend/src/app/components/header/header.component.css
@@ -6,7 +6,7 @@
     justify-content: center;
     align-items: center;
     border-radius: 0.5rem;
-    
+    margin-right: 1rem; 
 }
 .number{
     display: flex;
