--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -13,12 +13,13 @@
           <a class="nav-link" routerLink="registrationForm" *ngIf="!elementIs">Registration <span class="sr-only">(current)</span></a>
         </li>
       </ul>
-      <div class="books">
+      <a href="#">
+      <div class="books" *ngIf="elementIs ">
         <i class="fa fa-book fa-lg"></i>
         <div class="vertical"></div>
         <p class="number font-weight-bolder text-info ">{{number}}</p>
       </div>
-      
+      </a>
       <form class="form-inline mt-2 mt-md-0">
         <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search" *ngIf="elementIs ">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit" *ngIf="elementIs ">Search</button>
