--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -7,13 +7,16 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="/" *ngIf="elementIs">Home<span class="sr-only">(current)</span></a>
+          <a class="nav-link" routerLink="allBooks" *ngIf="elementIs">Home<span class="sr-only">(current)</span></a>
         </li>
+        <!-- <li class="nav-item active">
+          <a class="nav-link" *ngIf="elementIs">Home<span class="sr-only">(current)</span></a>
+        </li> -->
         <li class="nav-item active">
           <a class="nav-link" routerLink="registrationForm" *ngIf="!elementIs">Registration <span class="sr-only">(current)</span></a>
         </li>
       </ul>
-      <a href="#">
+      <a routerLink="/actualOrder">
       <div class="books" *ngIf="elementIs ">
         <i class="fa fa-book fa-lg"></i>
         <div class="vertical"></div>
