Add service for adding books to reader in frontend and init component for showing actual read books

--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -9,17 +9,17 @@
         <li class="nav-item active">
           <a class="nav-link" routerLink="allBooks" *ngIf="elementIs">Home<span class="sr-only">(current)</span></a>
         </li>
-        <!-- <li class="nav-item active">
-          <a class="nav-link" *ngIf="elementIs">Home<span class="sr-only">(current)</span></a>
-        </li> -->
+        <li class="nav-item active">
+          <a class="nav-link pointer" (click)="showMyBooks()" >MyBooks</a>
+        </li>
         <li class="nav-item active">
           <a class="nav-link" routerLink="registrationForm" *ngIf="!elementIs">Registration <span class="sr-only">(current)</span></a>
         </li>
         <li class="myDropdown nav-item active nav-link bg-dark" *ngIf="elementIs">
-          <span>Categories</span>
+          <span class="pointer">Categories</span>
           <div class="myDropdown-content text-light bg-dark" >
             <div *ngFor="let category of categories">
-            <a class="mt-3 text-light" (click)="chooseCategory(category)">{{category | titlecase}}</a>
+            <a class="mt-3 text-light pointer" (click)="chooseCategory(category)">{{category | titlecase}}</a>
           </div>
           </div>
         </li>
