--- a/frontend/src/app/components/actual-order/actual-order.component.html
+++ b/frontend/src/app/components/actual-order/actual-order.component.html
@@ -14,7 +14,7 @@
     </div>
 </div>
 <div class="d-flex justify-content-center mt-2" *ngIf="orderedBooks.length>0">
-    <button class="btn btn-success">Confirm your order</button>
+    <button class="btn btn-success" (click)="confirmOrder()">Confirm your order</button>
 </div>
 </div>
 </div>
