--- a/frontend/src/app/components/welcome/welcome.component.html
+++ b/frontend/src/app/components/welcome/welcome.component.html
@@ -1,6 +1,6 @@
 <div class="bg">
 <div class="wrapper" *ngFor="let book of books">
-    <div class="card">
+    <div class="card mb-5">
         <div class="card-body text-center">
             <h5 class="card-title">{{book.title}}</h5>
 
