--- a/frontend/src/app/components/my-books/my-books.component.html
+++ b/frontend/src/app/components/my-books/my-books.component.html
@@ -1,7 +1,13 @@
 <div class="bg">
-<div class="container mt-5">
-    <ul class="list-group">
-        <li class="list-group-item mt-1" *ngFor="let book of books">{{book.title}}</li>
-      </ul>
-</div>
+    <div class="container mt-5">
+        <div class="list-group">
+            <div *ngFor="let book of books" href="#" class="list-group-item active mt-1 pb-2">
+                <h4 class="list-group-item-heading d-flex justify-content-center">{{book.title}}</h4>
+                <div class=" d-flex justify-content-center">
+                    <button class="btn btn-dark" (click)="takeBookBack(book)"> Take it back</button>
+                </div>
+            </div>
+            <div class="mb-5"></div>
+        </div>
+    </div>
 </div>
