Add some exceptions

--- a/frontend/src/app/components/actual-order/actual-order.component.html
+++ b/frontend/src/app/components/actual-order/actual-order.component.html
@@ -17,4 +17,5 @@
     <button class="btn btn-success" (click)="confirmOrder()">Confirm your order</button>
 </div>
 </div>
+<div class="mb-5"></div>
 </div>
