--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -10,7 +10,7 @@
           <a class="nav-link" routerLink="allBooks" *ngIf="elementIs">Home<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link pointer" (click)="showMyBooks()" >MyBooks</a>
+          <a class="nav-link pointer" *ngIf="elementIs " (click)="showMyBooks()" >MyBooks</a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" routerLink="registrationForm" *ngIf="!elementIs">Registration <span class="sr-only">(current)</span></a>
