Add review component and service for adding the reviews

--- a/frontend/src/app/components/welcome/welcome.component.css
+++ b/frontend/src/app/components/welcome/welcome.component.css
@@ -15,8 +15,14 @@
 .card{
     width: 18rem;
     height: 25rem;
+
+
 }
 
 .myHeight{
     height: 13rem;
+}
+.card-body{
+    overflow: hidden; /* make sure it hides the content that overflows */
+    text-overflow: ellipsis; /* give the beautiful '...' effect */
 }
