--- a/frontend/src/app/components/my-books/my-books.component.html
+++ b/frontend/src/app/components/my-books/my-books.component.html
@@ -3,6 +3,9 @@
         <div class="list-group">
             <div *ngFor="let book of books" href="#" class="list-group-item active mt-1 pb-2">
                 <h4 class="list-group-item-heading d-flex justify-content-center">{{book.title}}</h4>
+                <div class="d-flex justify-content-center">
+                    <button class="mb-1 mt-2 btn btn-link bg-light" (click)="leaveReview(book.id)">Leave a review</button>
+                </div>
                 <div class=" d-flex justify-content-center">
                     <button class="btn btn-dark" (click)="takeBookBack(book)"> Take it back</button>
                 </div>
