--- a/frontend/src/app/components/welcome/welcome.component.html
+++ b/frontend/src/app/components/welcome/welcome.component.html
@@ -1,10 +1,10 @@
 <div class="bg">
 <div class="wrapper" *ngFor="let book of books">
-    <div class="card mb-5">
+    <div class="card mb-1">
         <div class="card-body text-center">
             <h5 class="card-title">{{book.title}}</h5>
-
             <p class="card-text myHeight">{{book.descr}}</p>
+
         </div>
         <ul class="list-group list-group-flush text-center">
             <li class="list-group-item">Available:{{book.quantity}}</li>
@@ -13,5 +13,8 @@
             <button class="btn btn btn-info" (click)="orderTheBook(book)">Order it</button>
         </div>
     </div>
+
 </div>
+<div class="mb-5"></div>
 </div>
+
