--- a/frontend/src/app/components/welcome/welcome.component.css
+++ b/frontend/src/app/components/welcome/welcome.component.css
@@ -26,3 +26,8 @@
     overflow: hidden; /* make sure it hides the content that overflows */
     text-overflow: ellipsis; /* give the beautiful '...' effect */
 }
+
+.minus, .plus{
+    cursor: pointer; 
+    
+}
